--- a/packages/starship/.config/starship.toml
+++ b/packages/starship/.config/starship.toml
@@ -1,4 +1,8 @@
-add_newline = true
+add_newline = false
+[line_break]
+disabled = true
+[time]
+disabled = true
 format ="""
     $username\
     $hostname\
