--- a/packages/starship/.config/starship.toml
+++ b/packages/starship/.config/starship.toml
@@ -1,8 +1,12 @@
 add_newline = false
+scan_timeout = 10
+
 [line_break]
 disabled = true
 [time]
 disabled = true
+
+
 format ="""
     $username\
     $hostname\
