--- a/packages/tmux/.tmux.conf
+++ b/packages/tmux/.tmux.conf
@@ -13,5 +13,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 
 set -s escape-time 0
+set-option -g default-terminal "screen-256color"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
