--- a/packages/alfred/Alfred.alfredpreferences/preferences/features/clipboard/prefs.plist
+++ b/packages/alfred/Alfred.alfredpreferences/preferences/features/clipboard/prefs.plist
@@ -5,11 +5,11 @@
 	<key>hotkey</key>
 	<dict>
 		<key>key</key>
-		<integer>4</integer>
+		<integer>34</integer>
 		<key>mod</key>
 		<integer>262144</integer>
 		<key>string</key>
-		<string>H</string>
+		<string>I</string>
 	</dict>
 	<key>ignoreRemoteClipboard</key>
 	<true/>
