--- a/packages/iterm2/com.googlecode.iterm2.plist
+++ b/packages/iterm2/com.googlecode.iterm2.plist
@@ -605,7 +605,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.0</real>
+			<real>0.29999999999999999</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
