--- a/packages/tmux/.tmux.conf
+++ b/packages/tmux/.tmux.conf
@@ -1,8 +1,10 @@
 unbind C-b
 set -g prefix C-l
 bind C-l send-prefix
-bind v split-window -h
-bind h split-window -v
+
+bind v split-window -h -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 set -g display-panes-time 2000
 
