--- a/packages/neovim/.config/nvim/coc-settings.json
+++ b/packages/neovim/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
     "coc.preferences.formatOnSaveFiletypes": ["css","markdown","python"],
-    "coc.preferences.formatOnType": true
+    "coc.preferences.formatOnType": true,
+    "snippets.ultisnips.directories":["UltiSnips","~/dotfiles/packages/coc-snippets/snippets"]
 }
