modefy git config

--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -1,6 +1,5 @@
-[user]
-	name = yuki-akiba-jp
-	email = rabuafe@gmail.com
+[include]
+    path = ~/dotfiles/packages/git/.gituserinfo.config
 [core]
 	editor = vim -c \"set fenc=utf-8\"
 	pager = less -F -X
