--- a/packages/miniforge/flask_app.yaml
+++ b/packages/miniforge/flask_app.yaml
@@ -8,7 +8,7 @@ dependencies:
   - beautifulsoup4=4.11.1=pyha770c72_0
   - brotlipy=0.7.0=py39hb18efdd_1004
   - bzip2=1.0.8=h3422bc3_4
-  - ca-certificates=2022.5.18.1=h4653dfc_0
+  - ca-certificates=2022.6.15=h4653dfc_0
   - certifi=2022.6.15=py39h2804cbe_0
   - cffi=1.15.0=py39h52b1de0_0
   - chardet=4.0.0=py39h2804cbe_3
@@ -56,7 +56,7 @@ dependencies:
   - markupsafe=2.1.1=py39hb18efdd_1
   - msgpack-python=1.0.3=py39h2c803a9_1
   - ncurses=6.3=h07bb92c_1
-  - openssl=1.1.1o=ha287fd2_0
+  - openssl=1.1.1p=ha287fd2_0
   - pip=22.1.1=pyhd8ed1ab_0
   - pkginfo=1.8.2=pyhd8ed1ab_0
   - postgresql=14.3=heaa1073_0
@@ -86,6 +86,7 @@ dependencies:
   - tk=8.6.12=he1e0b03_0
   - toml=0.10.2=pyhd8ed1ab_0
   - tqdm=4.64.0=pyhd8ed1ab_0
+  - typing=3.10.0.0=pyhd8ed1ab_0
   - tzcode=2022a=h1c322ee_0
   - tzdata=2022a=h191b570_0
   - urllib3=1.26.9=pyhd8ed1ab_0
@@ -99,5 +100,5 @@ dependencies:
   - zlib=1.2.12=h90dfc92_0
   - zstd=1.5.2=hd705a24_1
   - pip:
-      - neovim==0.3.1
+    - neovim==0.3.1
 prefix: /Users/yukiakiba/miniforge3/envs/flask_app
