--- a/packages/tmux/.tmux.conf
+++ b/packages/tmux/.tmux.conf
@@ -2,9 +2,14 @@ unbind C-b
 set -g prefix C-l
 bind C-l send-prefix
 
-bind v split-window -h -c "#{pane_current_path}"
-bind h split-window -v -c "#{pane_current_path}"
+bind V split-window -h -c "#{pane_current_path}"
+bind H split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 set -g display-panes-time 2000
 
