--- a/packages/tmux/.tmux.conf
+++ b/packages/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 unbind C-b
-set -g prefix C-j
-bind C-j send-prefix
+set -g prefix C-l
+bind C-l send-prefix
 
 bind V split-window -h -c "#{pane_current_path}"
 bind H split-window -v -c "#{pane_current_path}"
