modified iterm and alfred

--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -14,11 +14,15 @@ a  =  add
 cm = commit
 cmm = commit -m
 st = status
-b = branch
+br = branch
+brd= branch -d
+me = merge
+mem = merge -m
 co = checkout
 cob = checkout -b
 ps = push
-
+lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+lga = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 
 [init]
 	defaultBranch = main
