--- a/packages/git/.gitconfig
+++ b/packages/git/.gitconfig
@@ -13,13 +13,15 @@
 a  =  add
 cm = commit
 cmm = commit -m
+sw = switch
+swc = switch -c
 st = status
 br = branch
 brd= branch -d
 me = merge
 mem = merge -m
-co = checkout
-cob = checkout -b
+; co = checkout
+; cob = checkout -b
 ps = push
 pl = pull
 lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
