--- a/packages/coc-snippets/snippets/dockerfile.snippets
+++ b/packages/coc-snippets/snippets/dockerfile.snippets
@@ -29,3 +29,7 @@ endsnippet
 snippet entrypoint "ENTRYPOINT"
 ENTRYPOINT ["${1}"]
 endsnippet
+
+snippet expose "EXPOSE"
+EXPOSE ${1:80}
+endsnippet
